--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afrin portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/owl.jpg" type="image/x-icon">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span id="clr">Kazi Tahsina Afrin</span> World!!</h1>
+            <h3>Build website and graphic designer</h3>
+            <p>I am professional web developer and graphic designer.
+                I am expert in Adobe illustrator and Adobe Photoshop and also two years of experiance on this sector.
+                Do contact me if you need any help!</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/kazi-tahsina-afrin-b7575423a/">Hire
+                me</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/tahsina.png" alt="Tahsina photo">
+
+        </div>
+    </section>
 </body>
+
 </html>
