--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/tahsina.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream big</h1>
+            <h3>Become a Web Developer!</h3>
+            <p>I already learn basic HTML and CSS.Looking forward to learn new thing about web development.Continuing a
+                course with programming hero.It is very helpful.Will learn advanced topices soon. </p>
+            <a class="link-box2" target="_blank"
+                href="https://www.linkedin.com/in/kazi-tahsina-afrin-b7575423a/">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
