--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
                 href="https://www.linkedin.com/in/kazi-tahsina-afrin-b7575423a/">Download Resume</a>
         </div>
     </section>
+
+    <h1 style="margin: 50px;">Expeiences</h1>
+    <section class="experiences">
+
+        <div class="experience-item">
+
+            <h2>Full Stack Web Developer</h1>
+                <p>
+                    <span class="color">
+                        ||2023 Pro level Developer||</span><br>
+                    Full stack developer is a hardworking and
+                    challenging work.
+                    It needs a lof of motivation and hard work.It is a long process.By completing this programming
+                    hero
+                    course I think I will be able to become a full stack developer.
+                </p>
+            </h2>
+        </div>
+
+        <div class="experience-item">
+            <h2>Baby Web Developer</h2>
+            <p>
+                <span class="color">||2023 Programming Hero Learner||</span><br>
+                hardworking and here the challenging work is easier.
+                It needs a lof of practice to become a skilled person in this field and hard work also necessary .
+                It is a long process.
+            </p>
+        </div>
+
+    </section>
 </body>
 
 </html>
